crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__questing_beast_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 28,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Vigilance, deathtouch, haste"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "category": "Unknown",
            "fragment": "Vigilance, deathtouch, haste",
            "description": "Vigilance, deathtouch, haste"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 29,
          "end_byte": 82,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "~ can't be blocked by creatures with power 2 or less."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": {
              "CantBeBlockedBy": {
                "filter": {
                  "type": "Typed",
                  "type_filters": [
                    "Creature"
                  ],
                  "controller": null,
                  "properties": [
                    {
                      "type": "PtComparison",
                      "stat": "Power",
                      "scope": "Current",
                      "comparator": "LE",
                      "value": {
                        "type": "Fixed",
                        "value": 2
                      }
                    }
                  ]
                }
              }
            },
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "~ can't be blocked by creatures with power 2 or less."
          },
          "source_text": "~ can't be blocked by creatures with power 2 or less.",
          "body_ir": null
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 83,
          "end_byte": 161,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Combat damage that would be dealt by creatures you control can't be prevented."
      },
      "node": {
        "Spell": {
          "source_text": "Combat damage that would be dealt by creatures you control can't be prevented.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 77,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Combat damage that would be dealt by creatures you control can't be prevented"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "AddRestriction",
                    "restriction": {
                      "type": "DamagePreventionDisabled",
                      "source": 0,
                      "expiry": {
                        "type": "EndOfTurn"
                      },
                      "scope": {
                        "type": "SourcesControlledBy",
                        "data": 0
                      }
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 162,
          "end_byte": 279,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever ~ deals combat damage to an opponent, it deals that much damage to target planeswalker that player controls."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "DamageDone",
            "partial_def": {
              "mode": "DamageDone",
              "execute": null,
              "valid_card": null,
              "origin": null,
              "destination": null,
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "CombatOnly",
              "secondary": false,
              "valid_target": {
                "type": "Typed",
                "type_filters": [],
                "controller": "Opponent",
                "properties": []
              },
              "valid_source": {
                "type": "SelfRef"
              },
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 69,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "it deals that much damage to target planeswalker that player controls"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "DealDamage",
                        "amount": {
                          "type": "Ref",
                          "qty": {
                            "type": "EventContextAmount"
                          }
                        },
                        "target": {
                          "type": "Typed",
                          "type_filters": [
                            "Planeswalker"
                          ],
                          "controller": "TriggeringPlayer",
                          "properties": []
                        }
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "SelfRef"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "it deals that much damage to target planeswalker that player controls.",
              "relative_player_scope": "TriggeringPlayer"
            },
            "source_text": "Whenever ~ deals combat damage to an opponent, it deals that much damage to target planeswalker that player controls.",
            "die_results": []
          }
        }
      }
    }
  ],
  "source_text": "Vigilance, deathtouch, haste\nQuesting Beast can't be blocked by creatures with power 2 or less.\nCombat damage that would be dealt by creatures you control can't be prevented.\nWhenever Questing Beast deals combat damage to an opponent, it deals that much damage to target planeswalker that player controls.",
  "card_name": "Questing Beast"
}
