crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__reckless_bushwhacker_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 112,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Surge {1}{R} (You may cast this spell for its surge cost if you or a teammate has cast another spell this turn.)"
      },
      "node": {
        "Keyword": {
          "Surge": {
            "type": "Cost",
            "shards": [
              "Red"
            ],
            "generic": 1
          }
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 113,
          "end_byte": 118,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Haste"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Haste",
            "description": "Haste"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 119,
          "end_byte": 233,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When ~ enters, if its surge cost was paid, other creatures you control get +1/+0 and gain haste until end of turn."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "ChangesZone",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "GenericEffect",
              "static_abilities": [
                {
                  "mode": "Continuous",
                  "affected": {
                    "type": "Typed",
                    "type_filters": [
                      "Creature"
                    ],
                    "controller": "You",
                    "properties": [
                      {
                        "type": "Another"
                      }
                    ]
                  },
                  "modifications": [
                    {
                      "type": "AddPower",
                      "value": 1
                    },
                    {
                      "type": "AddToughness",
                      "value": 0
                    },
                    {
                      "type": "AddKeyword",
                      "keyword": "Haste"
                    }
                  ],
                  "condition": null,
                  "affected_zone": null,
                  "effect_zone": null,
                  "active_zones": [],
                  "characteristic_defining": false,
                  "description": "get +1/+0 and gain haste"
                }
              ],
              "duration": "UntilEndOfTurn",
              "target": null
            },
            "cost": null,
            "sub_ability": null,
            "duration": "UntilEndOfTurn",
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": null,
          "destination": "Battlefield",
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "When ~ enters, if its surge cost was paid, other creatures you control get +1/+0 and gain haste until end of turn.",
          "constraint": null,
          "condition": {
            "type": "CastVariantPaid",
            "variant": "Surge"
          },
          "batched": false
        }
      }
    }
  ],
  "source_text": "Surge {1}{R} (You may cast this spell for its surge cost if you or a teammate has cast another spell this turn.)\nHaste\nWhen this creature enters, if its surge cost was paid, other creatures you control get +1/+0 and gain haste until end of turn.",
  "card_name": "Reckless Bushwhacker"
}
