crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__reckless_bushwhacker_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Haste"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Haste",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "GenericEffect",
          "static_abilities": [
            {
              "mode": "Continuous",
              "affected": {
                "type": "Typed",
                "type_filters": [
                  "Creature"
                ],
                "controller": "You",
                "properties": [
                  {
                    "type": "Another"
                  }
                ]
              },
              "modifications": [
                {
                  "type": "AddPower",
                  "value": 1
                },
                {
                  "type": "AddToughness",
                  "value": 0
                },
                {
                  "type": "AddKeyword",
                  "keyword": "Haste"
                }
              ],
              "condition": null,
              "affected_zone": null,
              "effect_zone": null,
              "active_zones": [],
              "characteristic_defining": false,
              "description": "get +1/+0 and gain haste"
            }
          ],
          "duration": "UntilEndOfTurn",
          "target": null
        },
        "cost": null,
        "sub_ability": null,
        "duration": "UntilEndOfTurn",
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ enters, if its surge cost was paid, other creatures you control get +1/+0 and gain haste until end of turn.",
      "constraint": null,
      "condition": {
        "type": "CastVariantPaid",
        "variant": "Surge"
      },
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    {
      "Surge": {
        "type": "Cost",
        "shards": [
          "Red"
        ],
        "generic": 1
      }
    }
  ]
}
